--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -1,27 +1,28 @@
-spring：
+spring:
   profiles:
     active:
     - dev
 ---
-server：
-  port:8201
+
+server:
+  port: 8201
 spring:
   profiles: dev
-  application：
+  application:
     name: microservicecloud-config-client
-eureka：
+eureka:
   client:
     service-url:
       defaultzone：http://eureka-dev.com:7001/eureka/
 ---
 
-server：
-  port:8202
+server:
+  port: 8202
 spring:
   profiles: test
-  application：
+  application:
     name: microservicecloud-config-client
-eureka：
+eureka: 
   client:
     service-url:
       defaultzone：http://eureka-test.com:7001/eureka/
