--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -13,7 +13,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultzone：http://eureka-dev.com:7001/eureka/
+      defaultzone: http://eureka-dev.com:7001/eureka/
 ---
 
 server:
@@ -25,4 +25,4 @@ spring:
 eureka: 
   client:
     service-url:
-      defaultzone：http://eureka-test.com:7001/eureka/
+      defaultzone: http://eureka-test.com:7001/eureka/
