--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -13,7 +13,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultzone: http://eureka-dev.com:7001/eureka/
+      defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 
 server:
@@ -22,7 +22,8 @@ spring:
   profiles: test
   application:
     name: microservicecloud-config-client
-eureka: 
+eureka:
   client:
     service-url:
-      defaultzone: http://eureka-test.com:7001/eureka/
+      defaultZone: http://eureka-test.com:7001/eureka/
+
