--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -28,20 +28,20 @@ mybatis:
   - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
     
 
-# eureka:
-#   client: #客户端注册进eureka服务列表内
-#     service-url:
-#       defaultZone: http://eureka7001.com:7001/eureka
-#       #  defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
-#   instance:
-#     instance-id: dept-8001.com
-#     prefer-ip-address: true     #访问路径可以显示IP地址
+eureka:
+  client: #客户端注册进eureka服务列表内
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka
+      #  defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+  instance:
+    instance-id: dept-8001.com
+    prefer-ip-address: true     #访问路径可以显示IP地址
 
-# info:
-#   app.name: atguigu-cloud2018
-#   company.name: www.atguigu.com
-#   build.artifactId: @project.artifactId@
-#   build.version: @project.version@
+info:
+  app.name: atguigu-cloud2018
+  company.name: www.atguigu.com
+  build.artifactId: @project.artifactId@
+  build.version: @project.version@
 # ---
 # server:
 #   port: 8001 
