--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -37,11 +37,11 @@ eureka:
     instance-id: dept-8001.com
     prefer-ip-address: true     #访问路径可以显示IP地址
 
-info:
-  app.name: atguigu-cloud2018
-  company.name: www.atguigu.com
-  build.artifactId: @project.artifactId@
-  build.version: @project.version@
+# info:
+#   app.name: atguigu-cloud2018
+#   company.name: www.atguigu.com
+#   build.artifactId: @project.artifactId@
+#   build.version: @project.version@
 # ---
 # server:
 #   port: 8001 
