--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -40,8 +40,8 @@ eureka:
 info:
   app.name: atguigu-cloud2018
   company.name: www.atguigu.com
-#   build.artifactId: @project.artifactId@
-#   build.version: @project.version@
+  build.artifactId: @project.artifactId@
+  build.version: @project.version@
 # ---
 # server:
 #   port: 8001 
